--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Neil Hatfield" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
     </script>
-    <! Current FAQ Count: 69>
+    <! Current FAQ Count: 70>
 </head>
 
 <body>
@@ -138,12 +138,8 @@
                     <label for="faq41" class="lbl-toggle" tabindex="0">What's the course schedule?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                           <p>The tentative Spring 2021 course schedule is coming.</p>
-                           <!---
-                            <p>I have prepare a <em>tentative</em> course schedule. Please keep in mind that this schedule can and will change to meet the needs of our class. These schedules load as PDFs.<br />
-                                <a href="https://www.dropbox.com/s/u43qr60pbh357jv/MWFSchedule.pdf?dl=0" target="_blank" class="bodylinks">Section 1 (MWFs)</a><br />
-                                <a href="https://www.dropbox.com/s/v307nbdlebob9w8/TRFSchedule.pdf?dl=0" target="_blank" class="bodylinks">Section 3 (TThFs)</a></p>
-                                --->
+                           <p>I have prepared a <em>tentative</em> course schedule. Please keep in mind that this schedule can and will change to meet the needs our class. The schedule will load as a PDF.<br>
+                           <a href="https://www.dropbox.com/s/3ubi2gntfgnq0pv/tentativeschedule.stat461.sp2021.pdf?dl=0" class="bodylinks">Spring 2021 Schedule</a></p>
                         </div>
                     </div>
                 </div>
@@ -253,7 +249,7 @@
                                     <li>Requires <a href="https://bioconductor.org/install/" class="bodylinks">Installing Bioconductor</a> hasseDiagrams</li>
                                     <li>If you do NOT have TeX/LaTeX installed: tinytex (If you don't know what TeX/LaTeX is, install this package.)</li>
                                     </ul></li>
-                                <li><strong>Alternative/Other Statistical Software Packages:</strong> If there is a particular statistical software package you use in your major, you're welcome to use that. However, keep in mind that I will only be demonstrating how to use R in class and I'm not an expert on all packages. I will provide what limited support I can. If you use an alternative software package, you are ultimately responsible that you know how to use that software and can complete all assignments as posted. If your chosen software package cannot do something requested, you must seek out alternative means to do what is requested.</li>
+                                <li>I've written an R script that you can run to check if you have the appropriate versions of R and packages installed. Check out the information for running the <strong>Check Setup</strong> function at my <a href="https://github.com/neilhatfield/STAT461#check-setup" class="bodylinks">STAT 461 GitHub Repo</a>.</li>
                             </ul>
                             <p>If you are using a computer which does not allow you install software such as a Chromebook, please email me as soon as possible so we can get you set up with tools for success.</p>
                         </div>
@@ -284,6 +280,16 @@
                                 <li><a href="https://itunes.apple.com/us/app/socrative-student/id477618130" target="_blank" class="bodylinks">iPhone</a></li>
                             </ul>
                                </li></ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq70" class="toggle" type="checkbox">
+                    <label for="faq70" class="lbl-toggle" tabindex="0">What if I don't want to use R? Can I use some other software?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                           <p>I will not force you to use R. However, I would recommend that you use some type of statistical software (e.g., JMP, SAS, SPSS, Minitab, etc.), tools built in other software/languages (e.g., MatLab, Python, etc.),  or as a last resort spreadsheet application (Excel, Google Sheets). I DO NOT recommend that you attempt to complete this course by doing hand calculations or only a calculator. After all, an entire learning objective for this course is tied to your use of technology.</p>
+                            <p>If you <strong>choose to use something other than R</strong> (e.g., using a package commonly used in your major), then <strong>you are responsible for knowing how to use that software</strong>. I will only be showing how to use R during class. I will offer you what limited support I can by appointment. If your chosen software does not enable you to complete homework assignments as assigned, you will must seek out other software solutions.</p>
                         </div>
                     </div>
                 </div>
