--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Neil Hatfield" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
     </script>
-    <! Current FAQ Count: 70>
+    <! Current FAQ Count: 74>
 </head>
 
 <body>
@@ -32,7 +32,8 @@
                 <br />
                 <h2>Frequently Asked Questions</h2>
                 <p>This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible to address any questions that you and your classmates bring up as well as any changes that we need to make.</p>
-                <p>Date of Last Update: 1/11/2021</p>
+                <p>I've marked any questions related to Academic Integrity with (AI).</p>
+                <p>Date of Last Update: 1/25/2021</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -62,11 +63,12 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq68" class="toggle" type="checkbox">
-                    <label for="faq68" class="lbl-toggle" tabindex="0">When/Where are Student Hours?</label>
+                    <label for="faq68" class="lbl-toggle" tabindex="0">UPDATED: When/Where are Student Hours?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                           <p>To Be Announced--I will try to find a time that will work for the most students as well as myself.<br />
-                            You can always email me to set up additional times.</p>
+                           <p>Spring 2021 Student Hours: Tuesdays and Thursdays, 4:00pm to 6:00pm in our Microsoft Teams team page.<br />
+                            You can always email me to set up additional times. <br />
+                            There are a few days where I will need to cancel student hours (e.g., 1/26 and 2/2). I will post an announcement in Teams.</p>
                         </div>
                     </div>
                 </div>
@@ -144,11 +146,29 @@
                     </div>
                 </div>
                 <div class="wrap-collabsible">
+                    <input id="faq71" class="toggle" type="checkbox">
+                    <label for="faq71" class="lbl-toggle" tabindex="0">UPDATED: Do we get any days off since there is no Spring Break?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                           <p>The University has accounted for the lack of a Spring Break in the Spring 2021 semester by starting classes a week later than usual and providing for three Wellness Days. The Wellness Days will serve as days off; these dates are Feb. 9, March 11, and April 7. We will not have class on those days nor will I make anything due on those days. Other than these days, which I already accounted for when making the tentative schedule, are our only scheduled days off.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
                     <input id="faq55" class="toggle" type="checkbox">
                     <label for="faq55" class="lbl-toggle" tabindex="0">Does this class focus more on programming or learning theoretical knowledge?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>My intent for the semester is for there to be a balance between programming, applications, and theory. The programming aspect is to allow us to use a computer to do all of the computational work (that we shouldn't be doing by hand). The theoretical aspect will help us make informed decisions while the applications will give us the opportunity to make the theoretical grounded in doing something. Thus, there will be a mix of all three.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq74" class="toggle" type="checkbox">
+                    <label for="faq74" class="lbl-toggle" tabindex="0">UPDATED: How friendly is the course to people who are rusty on Statistics?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>The prerequisites for this course are STAT 200 or the equivalent (i.e., Introductory Statistics). I have built this course so that whether you took Intro Stats just last semester or several years ago, you'll be okay. Unit 1 is our review unit where we will do a crash course of the big ideas from Intro Stats that you'll need to have success in our class.</p>
                         </div>
                     </div>
                 </div>
@@ -257,10 +277,17 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq49" class="toggle" type="checkbox">
-                    <label for="faq49" class="lbl-toggle" tabindex="0">I don't know how to use R or RStudio.</label>
+                    <label for="faq49" class="lbl-toggle" tabindex="0">UPDATED: I don't know how to use R or RStudio. What should I do if I'm struggling with coding?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>No worries. I'm operating on the assumption that a majority of class has no or minimal experience with R/RStudio. We will build our knowledge of the software together in class.</p>
+                            <p>No worries if you don't know how to use R or RStudio. I'm operating on the assumption that a majority of class has no or minimal experience with R/RStudio. We will build our knowledge of the software together in class. Here are some things that you can do to get started and/or help you when you are struggling:</p>
+                            <ul>
+                                <li>Explore the R/RStudio Resources in Canvas. I'll be posting materials (e.g., guides, videos, etc.) that will help you get used to coding in R/RStudio.</li>
+                                <li>Make use of Student Hours; these are great opportunities to work through any coding difficulties.</li>
+                                <li>Make an appointment with me for one-on-one help if you can't make it to Student Hours.</li>
+                                <li>Practice, Practice, Practice: learning to code takes time and repetition. In the guides, I provide example code. Replicate my examples. Also look out for any challenges that I include as ways to check your understanding. Further, I try to point out additional data sets which you can explore and use as further practice.</li>
+                            </ul>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -290,6 +317,18 @@
                         <div class="content-inner">
                            <p>I will not force you to use R. However, I would recommend that you use some type of statistical software (e.g., JMP, SAS, SPSS, Minitab, etc.), tools built in other software/languages (e.g., MatLab, Python, etc.),  or as a last resort spreadsheet application (Excel, Google Sheets). I DO NOT recommend that you attempt to complete this course by doing hand calculations or only a calculator. After all, an entire learning objective for this course is tied to your use of technology.</p>
                             <p>If you <strong>choose to use something other than R</strong> (e.g., using a package commonly used in your major), then <strong>you are responsible for knowing how to use that software</strong>. I will only be showing how to use R during class. I will offer you what limited support I can by appointment. If your chosen software does not enable you to complete homework assignments as assigned, you will must seek out other software solutions.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq75" class="toggle" type="checkbox">
+                    <label for="faq75" class="lbl-toggle" tabindex="0">UPDATED: How did students who choose to use something other than R do in the class?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                           <p>In the past semesters, my students have fallen into three camps: used R, used Python and R, and used SPSS. For this question, the second two groups are the most important to examine.</p>
+                           <p>My Python/R users used both languages to their advantaged: using Python to do what they were comfortable with and then using R for what was new to them in either language. RStudio allows you to use both R and Python as you wish; you will need to install the <code>reticulate</code> package in R to assist.</p>
+                           <p>My SPSS users had more problems. While SPSS has a graphical user interface, the system itself is not the easiest to work with, especially for importing data. Further, SPSS cannot do everything that I will ask for, which meant they had to manually calculate the values of some statistics.</p>
+                           <p>At the end of the day, both groups of these students did just as well as those who just used R.</p>
                         </div>
                     </div>
                 </div>
@@ -461,7 +500,7 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq20" class="toggle" type="checkbox">
-                    <label for="faq20" class="lbl-toggle" tabindex="0">May I use my own past work and/or the work of others in this course?</label>
+                    <label for="faq20" class="lbl-toggle" tabindex="0">May I use my own past work and/or the work of others in this course? (AI)</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>No. This course adheres to the University's Academic Integrity Policy.</p>
@@ -472,7 +511,7 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq22" class="toggle" type="checkbox">
-                    <label for="faq22" class="lbl-toggle" tabindex="0">What is self-plagiarism?</label>
+                    <label for="faq22" class="lbl-toggle" tabindex="0">What is self-plagiarism? (AI)</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>Self-plagiarism occurs whenever a person re-uses old work with minor revisions. For example, if you did a data analysis project in Stat 200 and then submitted that for an assignment in Stat 461, you're committing self-plagiarism. All work submitted for a grade or feedback in a course should not be used for another course.</p>
@@ -482,7 +521,7 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq47" class="toggle" type="checkbox">
-                    <label for="faq47" class="lbl-toggle" tabindex="0">What are the differences between collusion, group work, and working together?</label>
+                    <label for="faq47" class="lbl-toggle" tabindex="0">What are the differences between collusion, group work, and working together? (AI)</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>Collusion is when a group of students work together and submit <em>essentially identical</em> copies of the same assignment as individuals when the assignment is <strong>not</strong> a group assignment. This is a form of cheating and violates Academic Integrity.</p>
@@ -608,10 +647,10 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq64" class="toggle" type="checkbox">
-                    <label for="faq64" class="lbl-toggle" tabindex="0">When are the tests-i.e., in class or in the evening?</label>
+                    <label for="faq64" class="lbl-toggle" tabindex="0">UPDATED: When are the tests-i.e., in class or in the evening?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                        <p>At this time, we will discuss and come to a decision as to whether tests are done during the 50 minute period of class, or another window of time. We will also decide as to the approximate length of the testing time.</p>
+                        <p>The class has voted to have tests be untimed but they must be completed in a particular time frame/window. Thus, they will not be done during our usual class time.</p>
                         </div>
                     </div>
                 </div>
@@ -632,6 +671,19 @@
                             <p>Since regular tests will either be held in class or given as Take Home tests, there is no reason for there to be a time conflict for tests.</p>
                             <p>However, you could experience a testing conflict for the Final Exam. This occurs when you have three (or more) final exams scheduled within one calendar day. To request relief, please see the <a href="http://www.registrar.psu.edu/exams/exam_overload.cfm" class="bodylinks" target="_blank">Registrar's Page</a>. The Filing Period for these requests runs from February 22, 2021 to March 14, 2021.</p>
                             <p>Please note that the Registrar's Office will handle all Final Exam Scheduling and Rescheduling.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq72" class="toggle" type="checkbox">
+                    <label for="faq72" class="lbl-toggle" tabindex="0">UPDATED: Will everyone have the same assignments/assessments? (AI)</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>Yes and no. Let me explain.</p>
+                            <p>Yes, everyone in our sections will have assignments/assessments which are consistent with everyone else's assignments.</p>
+                            <p>No, in that certain aspects of the assignments/assessments will vary from student to student. For example, when doing an assignment where you are making use of a web app, each student will have a different version of the app. A second example is that there might be elements of a question such as the data sets, context, etc. which are unique for each student. Whenever there are unique elements for each student, the difficulty and expectations for each student remain consistent.</p>
+                            <p>You are ultimately response to complete each assignment/assessment <strong>as assigned to you</strong> by myself and the way I've set up the assessment system including but not limited to web apps, and the online homework/testing system. If you are experiencing difficulties (e.g., getting a data set from an assignment), you need to contact me as soon as possible. <strong>Do not get the data set from a fellow student</strong> as there is no guarantee that their data will be the same as what you were assigned. Such actions may construed as violating the Academic Integrity Policies of this course and the University.</p>
+                            <p>I will not announce when there are student-specific unique elements in any of the questions, assignments, or assessments for this course.</p>
                         </div>
                     </div>
                 </div>
@@ -903,6 +955,15 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>STAT 462 is the Linear Regression course. While both toolkits come back to the same general linear model (typically expressed in matrix form), the nature of the questions and data we work with in the two courses are different; particularly the factors/regressors. Towards the end of the semester we will discuss ANCOVA which is the merger of ANOVA and Regression.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq73" class="toggle" type="checkbox">
+                    <label for="faq73" class="lbl-toggle" tabindex="0">UPDATED: What should I do if my WiFi goes out right before/during class?</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                            <p>Such things happen. Take a depth breath and don't panic. Let me know as soon as you are able. If you are experiencing routine disruptions, let me know and I'll see what I can do within the University's system to help.</p>
                         </div>
                     </div>
                 </div>
