--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Neil Hatfield" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
     </script>
-    <! Current FAQ Count: 75>
+    <! Current FAQ Count: 76>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                 <h2>Frequently Asked Questions</h2>
                 <p>This page serves as a collection of the most common and most important Course Questions to help you succeed. Be sure to look through the various sections. I will keep this page as up-to-date as possible to address any questions that you and your classmates bring up as well as any changes that we need to make.</p>
                 <p>I've marked any questions related to Academic Integrity with (AI).</p>
-                <p>Date of Last Update: 1/25/2021</p>
+                <p>Date of Last Update: 2/1/2021</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -858,6 +858,62 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>There are several policies to keep in mind throughout the semester; some are for this class, others are put in place by the University. Check out them out below.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap-collabsible">
+                    <input id="faq76" class="toggle" type="checkbox">
+                    <label for="faq76" class="lbl-toggle" tabindex="0">UPDATED: What are the consequences of violating Academic Integrity policies? (AI)</label>
+                    <div class="collapsible-content">
+                        <div class="content-inner">
+                           <p>I posed this issue to the class and set up voting. Here are the results:</p>
+                           <table rules="all" border="1pt">
+                               <caption>Consequences/Sanctions for Violating Academic Integrity</caption>
+                               <tr>
+                                   <td></td><th scope="col">First Time</th><th scope="col">Second Time</th><th scope="col">Third or Higher Time</th>
+                               </tr>
+                               <tr>
+                                   <th scope="row">Minor (homework)</th><td>10% off affected problem</td><td>20$ off affected problem</td><td>30% off the affected assignment</td>
+                               </tr>
+                               <tr>
+                                   <th scope="row">Moderate (homework)</th><td>10% off affected assignment</td><td>30% off affected Assignment</td><td>0 on the Assignment</td>
+                               </tr>
+                               <tr>
+                                   <th scope="row">Moderate (test)</th><td>50% off affected problem</td><td>20% off affected assignment</td><td>0 on affected assignment</td>
+                               </tr>
+                               <tr>
+                                   <th scope="row">Major</th><td>0 on affected assignment</td><td>0 on affected assignment and Course Grade lowered by one letter</td><td>Grade of XF for the course</td>
+                               </tr>
+                               <tr>
+                                   <th scope="row">Copyright Issues</th><td>0 on posted/affected assignment</td><td>Course Grade lowered by one letter</td><td>Grade of XF for the course</td>
+                               </tr>
+                           </table>
+                           <p>These will be the basis for my recommendations. Keep in mind that the Eberly committee on Academic Integrity may request alterations.</p>
+                           <p>The percentage off conversions will be done after the work is graded and in accordance to the following table.</p>
+                           <table role="presentation" rules="all" border="1px">
+                             <caption>Percentage Off Rubric Adjustments</caption>
+                             <tr>
+                               <th>Unpenalized Score</th><th>10% Off</th><th>20% Off</th><th>30% Off</th><th>50% Off</th><th>75% Off</th>
+                             </tr>
+                             <tr>
+                               <td>Adept</td><td>Advanced</td><td>Proficient</td><td>Proficient</td><td>Progressing</td><td>Beginning</td>
+                            </tr>
+                            <tr>
+                              <td>Advanced</td><td>Proficient</td><td>Progressing</td><td>Progressing</td><td>Beginning</td><td>Beginning</td>
+                            </tr>
+                            <tr>
+                              <td>Proficient</td><td>Progressing</td><td>Progressing</td><td>Beginning</td><td>Beginning</td><td>Beginning</td>
+                            </tr>
+                            <tr>
+                              <td>Progressing</td><td>Beginning</td><td>Beginning</td><td>Beginning</td><td>Not Shown</td><td>Not Shown</td>
+                            </tr>
+                            <tr>
+                              <td>Beginning</td><td>Beginning</td><td>Not Shown</td><td>Not shown</td><td>Not Shown</td><td>Not Shown</td>
+                            </tr>
+                            <tr>
+                              <td>Not Shown</td><td>Not Shown</td><td>Not Shown</td><td>Not Shown</td><td>Not Shown</td><td>Not Shown</td>
+                            </tr>
+                        </table>
                         </div>
                     </div>
                 </div>
