--- a/teaching.html
+++ b/teaching.html
@@ -52,7 +52,7 @@
                 First Day Activity</a></li>
             <li><a class="bodylinks" target="_blank" href="statApps/FourRooms.html">Four
                 Rooms</a></li>
-            <li><a class="bodylinks" target="_blank" href="statApps/Sequences.html">Sequences</a></li>
+            <li><a class="bodylinks" target="_blank" href="statApps/Processes.v2.html">Classifying Processes (v2)</a></li>
             <li><a class="bodylinks" target="_blank" href="statApps/FishSampling.html">Fish
                 Sampling</a></li>
             <li><a class="bodylinks" target="_blank" href="statApps/PeopleSamplingWeb.html">People
