--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -54,6 +54,10 @@
                     <li><a href="#policies" class="bodylinks">Other Important Policies</a></li>
                     <li><a href="#misc" class="bodylinks">Miscellaneous</a></li>
                 </ul>
+                <div>
+                    <script async src="https://cse.google.com/cse.js?cx=17b20c2230b32bf52"></script>
+                    <div class="gcse-search"></div>
+                </div>
                 <h2 id="keyInfo">Key Course Information</h2>
                 <div class="wrap-collabsible">
                     <input id="faq1" class="toggle" type="checkbox">
@@ -1001,7 +1005,7 @@
                                 To assist with grading, you'll receive a rubric category/score for each question. 
                                 These appear in the following table.
                             </p>
-                                <table class="tg" style="undefined;table-layout: fixed; width: 1000px">
+                                <table class="tg" style="table-layout: fixed; width: 1000px">
                                     <caption>Standards Based Grading Categories</caption>
                                 <colgroup>
                                 <col style="width: 100px">
