--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -302,7 +302,7 @@
                                 We will make use of G. W. Oehlert's <em>A First Course in Design and Analysis of
                                 Experiments</em> as our main reference textbook. You do not need to purchase this
                                 book; you can download a copy of the book for free from
-                                <a href="http://users.stat.umn.edu/~gary/book/fcdae.pdf" target="_blank" class="bodylinks">here</a>.
+                                <a href="http://users.stat.umn.edu/~gary/book/fcdae.pdf" target="_blank" class="bodylinks">Oehlert's webpage</a>.
                             </p>
                             <p>
                                 Additionally, there will be extra readings that I will provide throughout the
@@ -707,10 +707,10 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                            <p>To ensure that I and my grading team can get feedback to you in as timely a fashion as possible, I ask that you turn your homework in on time. In the event that you need more time to complete homework there are two routes you may take:</p>
-                           <h4>Late Passes</h4>
+                           <h3>Late Passes</h3>
                            <p>If you have late passes available to you, you may use them give yourself an additional 24 hours to complete the assignment. You may use a maximum of two late passes on any assignment (one for the calculation checks and one for the write up submission). Not all assignments will be eligible for using late passes (e.g., group assignment, quizzes, tests).</p>
                            <p>You do not need to ask me to use a late pass. These are things you can automatically use in the homework system.</p>
-                           <h4>Extension Requests</h4>
+                           <h3>Extension Requests</h3>
                             <p>You may also contact me about getting a limited extension. This is particularly useful if you are out of late passes, need more than 24 hours, or are dealing with an assignment not eligible for late passes. The process to request an extension is the following:</p>
                             <ul>
                                 <li>Contact me a minimum of one day/24 hours before the posted due date of the assignment.</li>
@@ -719,7 +719,7 @@
                                 <li>Propose a new due date.</li>
                             </ul>
                             <p>I will review each request on a case-by-case basis and get back to you with the extended due date that I grant you, which might not be the date you propose. Until you hear back from me, please do not assume that you have the extension. You may only ask for one extension per assignment.</p>
-                            <h4>Emergency Extensions/Illness</h4>
+                            <h3>Emergency Extensions/Illness</h3>
                             <p>Life happens and things can suddenly go sideways. In such an event, please reach out to me as soon as you can so that we can work together to get you back on track.</p>
                             <p>If you find yourself asking for multiple extensions, please reach out to me to discuss what’s going on. I’ll do the same if I feel that you’ve made a large number of extension requests.</p>
                             <h4>Viewing Answers</h4>
@@ -1011,7 +1011,7 @@
                                 </colgroup>
                                 <thead>
                                   <tr>
-                                    <th class="tg-0lax"></th>
+                                    <th class="tg-0lax">Level</th>
                                     <th class="tg-bobw" scope="col">Category</th>
                                     <th class="tg-bobw" scope="col">Description</th>
                                     <th class="tg-bobw" scope="col">Quasi-Equivalent "Traditional" Score</th>
@@ -1415,9 +1415,9 @@
                     <label for="faq18" class="lbl-toggle" tabindex="0">May I use my computer, iPad, or other tablet device in class?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                           <h4>In Person Classes</h4>
+                           <h3>In Person Classes</h3>
                            <p>I recognize that some students prefer to take notes via their laptop computers, iPads, or other tablet devices. You are welcome to do this AND if you and some classmates want to build a team notes document, you may. Additionally, we will be using statistical software all semester so having your laptop (or partnering with someone who has one in class) is an excellent idea. However, you should not let the use of your computing device become a distraction to your participation in class, nor should you allow your activity on the device to impede your learning or the learning of others around you. To this end, I will ask that you not be on any websites that do not directly pertain to our class (e.g., Facebook, Reddit, Tumblr, YouTube, Instagram, etc.). Additionally, you should not be working on items for other classes. </p>
-                           <h4>Zoom Sessions</h4>
+                           <h3>Zoom Sessions</h3>
                            <p>Clearly, you have to use some type of computing device for Zoom sessions. However, I ask that you still try to limit your usage to those things directly related to class. This will ensure that you are on a good path to success in the course.</p>
                         </div>
                     </div>
