--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -149,8 +149,13 @@
                     <label for="faq41" class="lbl-toggle" tabindex="0">What's the course schedule?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                           <p>I have prepared a <em>tentative</em> course schedule. Please keep in mind that this schedule can and will change to meet the needs our class. The schedule will load as a PDF.<br>
-                           <a href="https://www.dropbox.com/s/3ubi2gntfgnq0pv/tentativeschedule.stat461.sp2021.pdf?dl=0" class="bodylinks">Spring 2021 Schedule</a></p>
+                           <p>
+                               I have prepared a <em>very tentative</em> course schedule based upon past semesters. I will be updating
+                               this schedule based upon feedback from the class. 
+                            </p>
+                            <p>
+                                <a href="https://www.dropbox.com/s/88oisvjol2s7wso/tentativeSchedule.STAT461.SP2022.pdf?dl=0" class="bodylinks">Spring 2022 Schedule</a>
+                            </p>
                         </div>
                     </div>
                 </div>
